k8s/shortest-path-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortest-path-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: shortest-path-app
  template:
    metadata:
      labels:
        component: shortest-path-app
    spec:
      containers:
        - name: shortest-path-app
          image: taaesan/shortest-path-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shortest-path-app-service
  labels:
   component: shortest-path-app
spec:
  type: ClusterIP
  selector:
    component: shortest-path-app
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
